--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "nodejs",
+  "name": "notion-proxy",
   "version": "1.0.0",
-  "description": "",
+  "description": "A secure proxy for a Notion widget.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node index.js"
   },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "@notionhq/client": "^4.0.1",
-    "@types/node": "^22.13.11",
+    "@notionhq/client": "^2.2.13",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "express": "^4.18.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
